small bug fix for title misalignment

--- a/src/index.css
+++ b/src/index.css
@@ -81,16 +81,26 @@ body {
   background-color: var(--hl-color);
   color: var(--text-color);
 }
+
+.pageHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
 .pageTitle {
   color: var(--text-color);
   font-size: 36px;
   border-bottom: 3px solid var(--hl-color);
   margin-bottom: var(--spacing);
+  display: inline-block;
 }
 
 .pageDescription {
   color: var(--grey);
   font-size: 14px;
+  margin-bottom: 6px;
 }
 
 .socialIcons .icon {
